add get consume record
